@@ -46,13 +46,11 @@ struct _DhSearchClass {
                                DhLink            *link);
 };
 
-GType      dh_search_get_type              (void);
-GtkWidget *dh_search_new                   (GList       *keywords);
-void       dh_search_set_search_string     (DhSearch    *search,
-                                            const gchar *str,
-                                            const gchar *book_id);
-void       dh_search_grab_focus            (DhSearch    *search);
-void       dh_search_show_advanced_options (DhSearch    *search,
-                                            gboolean     show);
+GType      dh_search_get_type          (void);
+GtkWidget *dh_search_new               (GList       *keywords);
+void       dh_search_set_search_string (DhSearch    *search,
+                                        const gchar *str,
+                                        const gchar *book_id);
+void       dh_search_grab_focus        (DhSearch    *search);
 
 #endif /* __DH_SEARCH_H__ */
