@@ -1,5 +1,10 @@
 2008-10-09  Richard Hult  <richard@imendio.com>
 
+	* src/dh-search.h: Remove show_advanced function here too, it was
+	removed in the C file already.
+
+2008-10-09  Richard Hult  <richard@imendio.com>
+
 	* src/dh-util.[ch]: Add experimental state saving code to be used
 	soon.
 
